Fix the broken layout / Button functions
I fix the broken layout on small devices and add some javascript function that make the color of a table tab changes when I click in it

--- a/_css/style.css
+++ b/_css/style.css
@@ -161,8 +161,8 @@ img {
 
 .main-content {
     width: 100%;
-    max-width: 740px;
-    padding: 0 20px 60px 0;
+    max-width: 798px;
+    padding: 0 15px 60px 15px;
     background-color: #fdf5e6;
     filter: grayscale(75%);
 }
@@ -217,7 +217,6 @@ div .title {
 }
 
 .tab {
-    padding: 8px 16px;
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.16),0 0 10px 0 rgba(0,0,0,0.12);
     overflow: hidden;
 }
@@ -232,6 +231,12 @@ div .title {
     border: none;
     background-color: whitesmoke;
     letter-spacing: 2px;
+    padding: 8px 16px;
+}
+
+.tab #first-tab {
+    background-color: #000;
+    color: whitesmoke;
 }
 
 /************ 07. coffee image ************ 
